Subi mis cambios a este branch por si acaso habia cambios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,10 +40,15 @@
             android:theme="@style/AppTheme">
         </activity>
         <activity
-        android:name=".HistoryActivity"
+            android:name=".HistoryActivity"
+            android:label="Registro de actividades"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity
+        android:name=".SummaryActvity"
         android:label="Registro de actividades"
         android:theme="@style/AppTheme">
-    </activity>
+        </activity>
     </application>
 
 </manifest>
