Algunas modificaciones para que se pueda utlizar la grafica (aun no queda lista)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
         android:label="Registro de actividades"
         android:theme="@style/AppTheme">
         </activity>
+        <activity
+            android:name=".GraphActivity"
+            android:label="Grafica de las actividades"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
