--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    compile 'com.kovachcode:timePickerWithSeconds:1.0.1'
     testCompile 'junit:junit:4.12'
 }
