--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.kovachcode:timePickerWithSeconds:1.0.1'
+    compile 'com.jjoe64:graphview:4.2.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
